Revision history for Perl extension MooX::Emulate::Class::Accessor::Fast.

{{$NEXT}}

0.02      2014-11-29
 - Fix tests when Moose is not installed.

0.01      2014-08-26
 - First release.
