@@ -330,6 +330,16 @@ Aran Clary Deltac <bluefeet@gmail.com>
 Original code, tests, and documentation taken from
 L<MooseX::Emulate::Class::Accessor::Fast>.  Thanks!
 
+=head1 CONTRIBUTORS
+
+=over
+
+=item *
+
+Graham Knop <haarg@haarg.org>
+
+=back
+
 =head1 LICENSE
 
 This library is free software; you can redistribute it and/or modify
