@@ -1,6 +1,7 @@
 Revision history for Perl extension MooX::Emulate::Class::Accessor::Fast.
 
 {{$NEXT}}
+ - Fix Adopt creating methods on the wrong class. (haarg)
 
 0.02      2014-11-29
  - Fix tests when Moose is not installed.
